Changed style.css for wrapper.style2 from green to red

--- a/css/style.css
+++ b/css/style.css
@@ -586,7 +586,7 @@
 			.wrapper.style2 .button.special {
 				background: white;
 				border-color: white;
-				color: #83d3c9 !important;
+				color: #800000 !important;
 			}
 
 				.wrapper.style2 .button.special:hover {
